--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,6 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% block title %}Вхід{% endblock %}
 
