--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,13 +2,13 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
-{% block title %}Вхід{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
-<h2 class="mt-4">Вхід</h2>
+<h2 class="mt-4">Login</h2>
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary mt-3">Увійти</button>
+    <button type="submit" class="btn btn-primary mt-3">Login</button>
 </form>
 {% endblock %}
