--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,13 +1,13 @@
 {% extends 'base_generic.html' %}
 {% load crispy_forms_filters %}
 
-{% block title %}Реєстрація{% endblock %}
+{% block title %}Registration{% endblock %}
 
 {% block content %}
-<h2 class="mt-4">Реєстрація</h2>
+<h2 class="mt-4">Registration</h2>
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success mt-3">Зареєструватися</button>
+    <button type="submit" class="btn btn-success mt-3">Register</button>
 </form>
 {% endblock %}
