Fix registration and login

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,13 +1,25 @@
 {% extends 'base_generic.html' %}
 {% load crispy_forms_filters %}
 
-{% block title %}Registration{% endblock %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-<h2 class="mt-4">Registration</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success mt-3">Register</button>
-</form>
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">New user registration</h2>
+    <form method="post">
+      {% csrf_token %}
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card p-4">
+            <div class="card-body">
+              {{ form|crispy }}
+              <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary">Register</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 {% endblock %}
